--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ img{
     width: 100%;
     height: 75vh;
     position: relative;
-    background: url(img/bg.jpg) center center/cover;
+    background: url(bg.jpg) center center/cover;
     border-bottom: 8px solid #222222;
 }
 .showcase::after{
